# rust-android-w-dex

./: .gitignore  Cargo.toml  Makefile  README.md  classes.dex  manifest.yaml
example/: manifest.yaml
java/: Activity.java
java/androidnative/: pom.xml
java/androidnative/src/main/java/my/test/: Calculator.java
src/: lib.rs
