[package]
name = "android-support"
version = "0.1.0"
edition = "2021"
description = "Java helpers wrapped in Rust"
license = "MIT OR Apache-2.0"
authors = ["Marijn Suijten <marijns95@gmail.com>"]
repository = "https://github.com/MarijnS95/android-support"
homepage = "https://github.com/MarijnS95/android-support"
keywords = ["android", "ndk", "jni", "java"]
categories = ["os", "os::android-apis", "api-bindings"]

[dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
jni-sys = "0.4"

[lib]
crate-type = ["cdylib"]
